@@ -19,7 +19,7 @@
     description= _ "There are rumors of undead attacks on the eastern border of Wesnoth. You, an officer in the Royal Army, have been sent to the eastern front to protect the villagers and find out what is happening.
 
 (Intermediate level, 18 scenarios.)"
-    image="data/campaigns/Eastern_Invasion/images/portraits/gweddry.png"
+    image="data/campaigns/Eastern_Invasion/images/portraits/gweddry.png~SCALE(205,205)"
 
     [about]
         title = _ "Campaign Design"
