@@ -41,7 +41,7 @@
     difficulties=EASY,NORMAL,HARD
 
     icon="units/elves-wood/high-lord.png~RC(magenta>brown)"
-    image="data/campaigns/Legend_of_Wesmere/images/portraits/kalenz.png"
+    image="data/campaigns/Legend_of_Wesmere/images/portraits/kalenz.png~SCALE(205,205)"
     first_scenario="01_The_Uprooting"
     difficulties=EASY,NORMAL,HARD
 
