@@ -12,6 +12,10 @@ Version 1.5.8+svn:
  * Graphics:
    * Removed the black background from some remaining old portraits
    * New portrait for Dwarf Thunderer, Dwarf Dragonguard, Human Pikeman, Dwarf Fighter, Dwarf Lord.
+   * New image-path functions:
+     * SCALE(W,H): scale down an image to the specified width (W) and height (H)
+       for rendering. Negative or null (zero) numbers are ignored when scaling
+       in the respective direction.
  * Language and i18n:
    * updated translations: Chinese (Traditional), Czech, French, German,
      Hungarian, Italian, Polish, Slovak, Spanish
